--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "aimosoft/aimocms",
-    "description": "A cms developed by yii2",
+    "description": "A cms developed by yii2,used for company web site",
     "keywords": ["yii2", "cms", "aimocms"],
     "homepage": "http://www.aimosoft.com/",
     "type": "project",
@@ -17,7 +17,9 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*"
+        "yiisoft/yii2-swiftmailer": "*",
+        "bower-asset/metisMenu": "~1.1.3",
+        "bower-asset/font-awesome": "~4.2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
