--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "license": "BSD-3-Clause",
     "support": {
         "issues": "https://github.com/jackieit/aimocms/issues",
-        "forum": "todo",
+
         "wiki": "https://github.com/jackieit/aimocms/wiki",
-        "irc": "todo",
+
         "source": "https://github.com/jackieit/aimocms"
     },
     "minimum-stability": "dev",
@@ -19,13 +19,14 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "bower-asset/metisMenu": "~1.1.3",
-        "bower-asset/font-awesome": "~4.2.0"
+        "bower-asset/font-awesome": "~4.2.0",
+        "creocoder/yii2-nested-sets": "^0.9.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+        "yiisoft/yii2-gii": "*"
     },
     "config": {
         "process-timeout": 1800
